--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.27.2",
@@ -22,9 +23,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "typescript": "~4.3.5",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12"
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
